--- a/assets/css/register_style.css
+++ b/assets/css/register_style.css
@@ -66,6 +66,40 @@ body {
     font-size: 250%;
 }
 
-.login_content {
+#login_content {
     margin-top: 2%;
+    text-align: left;
+}
+
+#signup_content {
+    display: none;
+}
+
+input[type="submit"] {
+    color: white;
+    background-color: #0f3657;
+    border: 1px solid #0f3657;
+    border-radius: 3px;
+    margin: 5px 0 10px 0;
+    padding: 5px 10px 5px 10px;
+    font-family: 'FiraSans-Light', 'sans-serif';
+    font-size: 85%;
+}
+
+input[type="text"], input[type="email"], input[type="password"] {
+    border: 1px solid #ededed;
+    margin-top: 5px;
+    width: 70%;
+    height: 35px;
+    margin-bottom: 3px;
+    padding-left: 6px;
+}
+
+input[type="text"]:hover, input[type="email"]:hover, input[type="password"]:hover {
+    border-color: #0f3657;
+}
+
+a {
+    text-decoration: none;
+    color: #0f3657;
 }
