top icon bar with icons added

--- a/assets/css/register_style.css
+++ b/assets/css/register_style.css
@@ -4,7 +4,7 @@
 }
 
 @font-face {
-    font-family: 'FiraSans-Light';
+    font-family: 'FiraSans-Bold';
     src: url('../fonts/FiraSans-Bold.otf')
 }
 
